testkit/src/test/input/check/ambiguity/ambiguity.check
Missing: ambiguity.riddl(3:5): Entity 'Product' in Context 'ProductInventory' should have content:
     entity Product is {???}
     ^
Missing: ambiguity.riddl(9:3): Type 'Alias' should have a description:
   type Alias = Id(Product)
   ^
Missing: ambiguity.riddl(1:1): Domain 'Inventory' should have a description:
 domain Inventory is {
 ^
Error: ambiguity.riddl(9:19): Path 'Product' was not resolved, in Type 'Alias', but should refer to an Entity:
   type Alias = Id(Product)
                   ^
Missing: ambiguity.riddl(5:3): Context 'Vendor' should have a description:
   context Vendor is {
   ^
Style: ambiguity.riddl(6:5): Entity 'Product' overloads Entity 'Product' at ambiguity.riddl(3:5):
     entity Product is {???}
     ^
Missing: ambiguity.riddl(2:3): Context 'ProductInventory' should have a description:
   context ProductInventory is {
   ^
Error: ambiguity.riddl(9:19): Path reference 'Product' is ambiguous. Definitions are:
   Inventory.ProductInventory.Product (ambiguity.riddl(3:5))
   Inventory.Vendor.Product (ambiguity.riddl(6:5)):
   type Alias = Id(Product)
                   ^
Missing: ambiguity.riddl(6:5): Entity 'Product' in Context 'Vendor' should have content:
     entity Product is {???}
     ^
Warning: ambiguity.riddl(3:5): Entity 'Product' is unused:
     entity Product is {???}
     ^
Warning: ambiguity.riddl(6:5): Entity 'Product' is unused:
     entity Product is {???}
     ^
Warning: ambiguity.riddl(9:3): Type 'Alias' is unused:
   type Alias = Id(Product)
   ^
