testkit/src/test/input/check/ambiguity/ambiguity.riddl
domain Inventory is {
  context ProductInventory is {
    entity Product is {???}
  }
  context Vendor is {
    entity Product is {???}
  }

  type Alias = Id(Product)
}